Small fixes to task 1

--- a/content/project_1-depolarizing_channel.ipynb
+++ b/content/project_1-depolarizing_channel.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "In this project we will implement the **depolarizing channel** in Qiskit and test it with state tomography on a simulator and optionally on a real device.\n",
     "\n",
-    "The depolarizing channel is one of the most common models of qubit decoherence due to its nice symmetry properties. We can describe it by stating that, with probability $p$ the qubit remains intact, while with probability $1-p$ an error occurs. The error can be a bit flip error, described by the action of $\\sigma_x$, a phase flip error, described by the action of $\\sigma_z$, or both, described by the action of $\\sigma_y$. The dynamical map of a Markovian open quantum system subjected to depolarizing noise can be written as\n",
+    "The depolarizing channel is one of the most common models of qubit decoherence due to its nice symmetry properties. We can describe it by stating that, with probability $1-p$ the qubit remains intact, while with probability $p$ an error occurs. The error can be a bit flip error, described by the action of $\\sigma_x$, a phase flip error, described by the action of $\\sigma_z$, or both, described by the action of $\\sigma_y$. The dynamical map of a Markovian open quantum system subjected to depolarizing noise can be written as\n",
     "\n",
     "\\begin{align}\n",
     "\\Phi_t \\rho_S = \\left[1-\\frac 3 4 p(t)\\right] \\rho_S + \\frac{p(t)}{4} \\sum_i \\sigma_i \\rho_S \\sigma_i,\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
     "# Quantum circuit\n",
     "depolarizing = QuantumCircuit(q)\n",
     "\n",
-    "# Depolarizing channel acting on q_2\n",
+    "# Depolarizing channel acting on q_0\n",
     "## Qubit identification\n",
     "system = 0\n",
     "a_0 = 1\n",
@@ -135,7 +135,7 @@
    "metadata": {},
    "source": [
     "## Task 2 (1p)\n",
-    "Write a circuit `prepare_state` that prepares the `system` qubit in an initial state that has non-zero populations and coherences (both real and imaginary parts)."
+    "Write a circuit `initial_state` that prepares the `system` qubit in an initial state that has non-zero populations and coherences (both real and imaginary parts)."
    ]
   },
   {
@@ -165,11 +165,11 @@
     "\n",
     "1. For different values of $p \\in [0, 1]$: \n",
     "\n",
-    "    1. Combine `prepare_state` and `depolarizing_channel` in a circuit.\n",
+    "    1. Combine `initial_state` and `depolarizing_channel` in a circuit.\n",
     "\n",
     "    2. Prepare and run `StateTomography` from `qiskit_experiments.library.tomography` to perform tomography **only** on the system qubit using a simulator.\n",
     "\n",
-    "      - Compute also the fidelity compared to the **state of the system qubit** in `prepare_state` (without the depolarizing channel). You may need [`partial_trace`](https://qiskit.org/documentation/apidoc/quantum_info.html#qiskit.quantum_info.partial_trace) from `qiskit.quantum_info`.\n",
+    "      - Compute also the fidelity compared to the **state of the system qubit** in `initial_state` (without the depolarizing channel). You may need [`partial_trace`](https://qiskit.org/documentation/apidoc/quantum_info.html#qiskit.quantum_info.partial_trace) from `qiskit.quantum_info`.\n",
     "\n",
     "      - Compute errorbars for the fidelities with [bootstrapping](https://en.wikipedia.org/wiki/Bootstrapping_(statistics)). For this, use `StateTomographyAnalysis` from `qiskit_experiments.library.tomography` with some arguments and provide this to `StateTomography`.\n",
     "\n",
@@ -229,11 +229,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_ibm_provider import IBMProvider\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "provider = IBMProvider()\n",
+    "service = QiskitRuntimeService()\n",
     "# Replace ibm_brisbane with the backend you want to run this on\n",
-    "backend = provider.get_backend(\"ibm_brisbane\")"
+    "backend = service.get_backend(\"ibm_brisbane\")"
    ]
   },
   {
