--- a/content/project_1-solution.ipynb
+++ b/content/project_1-solution.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "source": [
     "## Task 2 (1p)\n",
-    "Write a circuit `prepare_state` that prepares the `system` qubit in an initial state that has non-zero populations and coherences (both real and imaginary parts)."
+    "Write a circuit `initial_state` that prepares the `system` qubit in an initial state that has non-zero populations and coherences (both real and imaginary parts)."
    ]
   },
   {
@@ -106,9 +106,9 @@
     "ancillae = [0, 2, 3]\n",
     "\n",
     "# Prepare the qubit in a state that has coherence and different populations \n",
-    "prepare_state = QuantumCircuit(q)\n",
-    "prepare_state.u(np.pi/4, np.pi/4, 0, q[system])\n",
-    "prepare_state.draw('mpl')"
+    "initial_state = QuantumCircuit(q)\n",
+    "initial_state.u(np.pi/4, np.pi/4, 0, q[system])\n",
+    "initial_state.draw('mpl')"
    ]
   },
   {
@@ -120,11 +120,11 @@
     "\n",
     "1. For different values of $p \\in [0, 1]$: \n",
     "\n",
-    "    1. Combine `prepare_state` and `depolarizing_channel` in a circuit.\n",
+    "    1. Combine `initial_state` and `depolarizing_channel` in a circuit.\n",
     "\n",
     "    2. Prepare and run `StateTomography` from `qiskit_experiments.library.tomography` to perform tomography **only** on the system qubit using a simulator.\n",
     "\n",
-    "        - Compute also the fidelities compared to the **state of the system qubit** in `prepare_state` (without the depolarizing channel). You may need `partial_trace` from `qiskit.quantum_info`.\n",
+    "        - Compute also the fidelities compared to the **state of the system qubit** in `initial_state` (without the depolarizing channel). You may need `partial_trace` from `qiskit.quantum_info`.\n",
     "\n",
     "        - Compute errorbars for the fidelities with [bootstrapping](https://en.wikipedia.org/wiki/Bootstrapping_(statistics)). For this, use `StateTomographyAnalysis` from `qiskit_experiments.library.tomography` with some arguments and provide this to `StateTomography`.\n",
     "\n",
@@ -146,11 +146,11 @@
     "tomography_circuits = []\n",
     "\n",
     "for p in p_values:\n",
-    "    circ = prepare_state.compose(depolarizing_channel(q, p, system, ancillae))\n",
+    "    circ = initial_state.compose(depolarizing_channel(q, p, system, ancillae))\n",
     "    tomography_circuits.append(circ)\n",
     "\n",
     "# Compute fidelities wrt. this state\n",
-    "psi = partial_trace(Statevector(prepare_state), [q for q in range(prepare_state.num_qubits) if q != system])\n",
+    "psi = partial_trace(Statevector(initial_state), [q for q in range(initial_state.num_qubits) if q != system])\n",
     "\n",
     "# Perform boostrapping for fidelity errors\n",
     "analysis = StateTomographyAnalysis()\n",
@@ -235,7 +235,7 @@
     "# Theoretical prediction\n",
     "\n",
     "# We obtain the density operator of the initial state\n",
-    "rho0 = partial_trace(Statevector(prepare_state), ancillae).data\n",
+    "rho0 = partial_trace(Statevector(initial_state), ancillae).data\n",
     "\n",
     "plt.plot(p_values, np.real(rho0[0,1])*(1-p_values), \"C0\", linewidth=.5)\n",
     "plt.plot(p_values, np.imag(rho0[0,1])*(1-p_values), \"C1\", linewidth=.5)\n",
@@ -381,11 +381,11 @@
     "tomography_circuits = []\n",
     "\n",
     "for p in p_values:\n",
-    "    circ = prepare_state.compose(depolarizing_channel(q, p, system, ancillae))\n",
+    "    circ = initial_state.compose(depolarizing_channel(q, p, system, ancillae))\n",
     "    tomography_circuits.append(circ)\n",
     "\n",
     "# Compute fidelities wrt. this state\n",
-    "psi = partial_trace(Statevector(prepare_state), ancillae)\n",
+    "psi = partial_trace(Statevector(initial_state), ancillae)\n",
     "\n",
     "# Perform boostrapping for fidelity errors\n",
     "state_tomo = StateTomographyAnalysis()\n",
@@ -469,7 +469,7 @@
     "# Theoretical prediction\n",
     "\n",
     "# We obtain the density operator of the initial state\n",
-    "rho0 = partial_trace(Statevector(prepare_state), ancillae).data\n",
+    "rho0 = partial_trace(Statevector(initial_state), ancillae).data\n",
     "\n",
     "plt.plot(p_values, np.real(rho0[0,1])*(1-p_values), \"C0\", linewidth=.5)\n",
     "plt.plot(p_values, np.imag(rho0[0,1])*(1-p_values), \"C1\", linewidth=.5)\n",
