Use numerical solver for finding angles of Pauli channel

--- a/content/final_project-solutions.ipynb
+++ b/content/final_project-solutions.ipynb
@@ -305,7 +305,7 @@
     "- Amplitude damping channel\n",
     "\n",
     "\n",
-    "You are allowed to use the implementations of the noise channels from previous projects or noise models in `qiskit_aer.noise`."
+    "You may use the noise models implemented in `qiskit_aer.noise`. You are also allowed to use the implementations of the noise channels from previous projects, however beware that you may encounter numerical instabilities."
    ]
   },
   {
