--- a/content/final_project.ipynb
+++ b/content/final_project.ipynb
@@ -192,7 +192,7 @@
     "- Amplitude damping channel\n",
     "\n",
     "\n",
-    "You are allowed to use the implementations of the noise channels from previous projects or noise models in `qiskit_aer.noise`."
+    "You may use the noise models implemented in `qiskit_aer.noise`. You are also allowed to use the implementations of the noise channels from previous projects, however beware that you may encounter numerical instabilities."
    ]
   },
   {
@@ -231,7 +231,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "oqs-test",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
